--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
                     <div class="carousel-inner">
                       <div class="carousel-item active">
                         <img src="/images/pexels-dimitri-kuliuk-1488318.jpg" class="d-block w-100 c-item" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                          <h1>First slide label</h1>
+                        <div class="carousel-caption d-none d-md-block top-0">
+                          <h1>The perfect venue for your next event</h1>
                           <p>Some representative placeholder content for the first slide.</p>
+                          <a href="">Book Now</a>
                         </div>
                       </div>
                       <div class="carousel-item">
