--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div class="carousel-inner">
                       <div class="carousel-item active">
                         <img src="/images/pexels-dimitri-kuliuk-1488318.jpg" class="d-block w-100 c-item" alt="...">
-                        <div class="carousel-caption d-none d-md-block top-0">
+                        <div class="carousel-caption d-sm-block d-md-block top-0">
                           <h1>The perfect venue for your next event</h1>
                           <p>Some representative placeholder content for the first slide.</p>
                           <a href="">Book Now</a>
@@ -82,7 +82,7 @@
                     <div class="moment-img">
                         <img class="img-fluid w-100" src="/images/pexels-trung-nguyen-1751681.jpg" alt="">
                     </div>
-                    <div class="moment-text po">
+                    <div class="moment-text">
                         <h3>Every Moment is Precious</h3>
                             <div class="toast show test" role="alert" aria-live="assertive" aria-atomic="true">
                                 <div class="toast-header">
