--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                     <div class="carousel-inner">
                       <div class="carousel-item active">
                         <img src="/images/pexels-dimitri-kuliuk-1488318.jpg" class="d-block w-100 c-item" alt="...">
-                        <div class="carousel-caption d-sm-block d-md-block top-0">
-                          <h1>The perfect venue for your next event</h1>
-                          <p>Some representative placeholder content for the first slide.</p>
+                        <div class="container-start">
+                          <h1 class="text-white">The perfect venue for your next event</h1>
+                          <p class="text-white">Some representative placeholder content for the first slide.</p>
                           <a href="">Book Now</a>
                         </div>
                       </div>
