--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
                         <div class="container-start">
                           <h1 class="text-white">The perfect venue for your next event</h1>
                           <p class="text-white">Some representative placeholder content for the first slide.</p>
-                          <a href="">Book Now</a>
+                          <div class="link">
+                            <a href="">Book Now</a>
+                          </div>
                         </div>
                       </div>
                       <div class="carousel-item">
@@ -289,7 +291,7 @@
                     </div>
                 </div>
             </section>
-            <section class="asked-section">
+            <section class="asked-section mb-5">
                 <h1 class="text-center text-dark mt-5">Frequently Asked Questions</h1>
                 <div class="container accordion-container mt-5">
                     <div class="accordion"      id="accordionExample">
