--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <img src="/images/pexels-dimitri-kuliuk-1488318.jpg" class="d-block w-100 c-item" alt="...">
                         <div class="container-start">
                           <h1 class="text-white">The perfect venue for your next event</h1>
-                          <p class="text-white">Some representative placeholder content for the first slide.</p>
+                          <p class="text-white">We know that every love story bringing two people together is special, and this is how we approach organisation of wedding ceremonies at Melenos in Lindos, with dedication and passion to deliver the utmost unique wedding experience every single time.</p>
                           <div class="link">
                             <a href="">Book Now</a>
                           </div>
