--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <img src="/images/pexels-dimitri-kuliuk-1488318.jpg" class="d-block w-100 c-item" alt="...">
                         <div class="container-start">
                           <h1 class="text-white">The perfect venue for your next event</h1>
-                          <p class="text-white">We know that every love story bringing two people together is special, and this is how we approach organisation of wedding ceremonies at Melenos in Lindos, with dedication and passion to deliver the utmost unique wedding experience every single time.</p>
+                          <p class="text-white">We know marriage is a sacred bond. Marriage is a very joyful event in every person's life. And we work to make this happy moment more beautiful and interesting.</p>
                           <div class="link">
                             <a href="">Book Now</a>
                           </div>
@@ -179,9 +179,7 @@
                         </div>
                     </div>
                     <div class="package1 position-relative">
-                        <button type="button" class="absolute-btn btn btn-danger position-absolute transform-middle">
-                            Hot <span class=" badge border border-light rounded-pill bg-danger p-2"></span>
-                        </button>
+                        <span><input class=" hot-button" type="button" value="Hot"></span>
                         <h1>$800</h1>
                         <h3>Wedding Plush</h3>
                         <p>For most weddings with 
