--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
             </section>
             <!-- home section end -->
             <section class="moment-section">
-                <div class="container moment">
-                    <div class="moment-img">
+                <div class=" row container moment">
+                    <div class="moment-img col sm-last">
                         <img class="img-fluid w-100" src="/images/pexels-trung-nguyen-1751681.jpg" alt="">
                     </div>
                     <div class="moment-text">
@@ -179,7 +179,7 @@
                         </div>
                     </div>
                     <div class="package1 position-relative">
-                        <span><input class=" hot-button" type="button" value="Hot"></span>
+                        <span><input class=" hot-button bg-danger" type="button" value="Hot"></span>
                         <h1>$800</h1>
                         <h3>Wedding Plush</h3>
                         <p>For most weddings with 
