--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </section>
             <!-- home section end -->
             <section class="moment-section">
-                <div class=" row container moment">
+                <div class=" container moment">
                     <div class="moment-img col sm-last">
                         <img class="img-fluid w-100" src="/images/pexels-trung-nguyen-1751681.jpg" alt="">
                     </div>
