--- a/index.html
+++ b/index.html
@@ -81,8 +81,11 @@
             <!-- home section end -->
             <section class="moment-section">
                 <div class=" container moment">
-                    <div class="moment-img col sm-last">
+                    <div class="moment-img col sm-order-last">
                         <img class="img-fluid w-100" src="/images/pexels-trung-nguyen-1751681.jpg" alt="">
+                        <div class="explore-link col sm-order-last">
+                            <a href="" target="_blank">Explore Our Album</a>
+                        </div>
                     </div>
                     <div class="moment-text">
                         <h3>Every Moment is Precious</h3>
@@ -90,11 +93,15 @@
                                 <div class="toast-header">
                                   <img src="/clients/1679741_box_christmas_gift_package_present_icon.png" class="rounded" alt="..." style="width: 4vw;">
                                   <strong class="me-auto">20% off on next booking</strong>
-                                  <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                                  <div class="col sm-last">
+                                    <button type="button" class="btn-close col sm-last" data-bs-dismiss="toast" aria-label="Close"></button>
+                                  </div>
                                 </div>
                             </div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis dolor, aliquam ad quas provident et.</p>
-                        <a href="" target="_blank">Explore Our Album</a>
+                        <div class="confuse-link">
+                            <a href="" target="_blank">Explore Our Album</a>
+                        </div>
                     </div>
                 </div>
             </section>
