--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/style/style.css">
+    <script src="https://kit.fontawesome.com/53b45c96f8.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- main section start -->
@@ -98,9 +99,9 @@
                                   </div>
                                 </div>
                             </div>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis dolor, aliquam ad quas provident et.</p>
+                        <p>Keep the beautiful moments like weddings indelible in your memories. May the best moments of life always be with you.</p>
                         <div class="confuse-link">
-                            <a href="" target="_blank">Explore Our Album</a>
+                            <a href="" target="_blank">Explore Our Album <i class="fa-solid fa-arrow-right-long"></i></a>
                         </div>
                     </div>
                 </div>
