--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <main>
             <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
                 <div class="container">
-                    <a class="navbar-brand" href="#">Abacus Center</a>
+                    <a class="navbar-brand" href="#">DreamLife</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
