--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                                 </h2>
                                 <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                   <div class="accordion-body">
-                                    <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                    Event design encompasses the more creative side of event management. While a planner focuses on organization, we focus on the decor of the event. From draping to lighting, furniture, and centerpieces, it is our job to ensure your event is truly stunning.
                                   </div>
                                 </div>
                               </div>
@@ -362,7 +362,7 @@
             <div class="container">
                 <div class="footer-info">
                     <div class="copyright">
-                        <p class="text-white">©2020 bike. all rights reserved</p>
+                        <p class="text-white">©2020 dreamlife. all rights reserved</p>
                     </div>
                     <div class="information">
                         <h5 class="text-white">Get the app</h5>
