--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="moment-img col sm-order-last">
                         <img class="img-fluid w-100" src="/images/pexels-trung-nguyen-1751681.jpg" alt="">
                         <div class="explore-link col sm-order-last">
-                            <a href="" target="_blank">Explore Our Album</a>
+                            <a href="" target="_blank">Explore Our Album <i class="fa-solid fa-arrow-right-long"></i></a>
                         </div>
                     </div>
                     <div class="moment-text">
@@ -362,7 +362,7 @@
             <div class="container">
                 <div class="footer-info">
                     <div class="copyright">
-                        <p class="text-white">©2020 dreamlife. all rights reserved</p>
+                        <p class="text-white">©2023 dreamlife. all rights reserved</p>
                     </div>
                     <div class="information">
                         <h5 class="text-white">Get the app</h5>
