--- a/index.html
+++ b/index.html
@@ -271,28 +271,22 @@
                 <div class="container">
                     <div class="clients">
                         <div class="client">
-                            <p>Slate helps you see how many more days you need 
-                                to work to reach your financial 
-                                goal for the month and year.</p>
+                            <p>Here are some tips to help you achieve your goals by considering your financial situation.</p>
                             <img class="img-fluid1" src="/clients/pexels-andrea-piacquadio-785667.jpg" alt="" style="width: 10vw;">
-                            <p>Jhone</p>
-                            <p>Banker</p>
+                            <p>Elina</p>
+                            <p>Manager</p>
                         </div>
                         <div class="client">
-                            <p>Slate helps you see how many more days you need 
-                                to work to reach your financial 
-                                goal for the month and year.</p>
+                            <p>Here are some tips to help you achieve your goals by considering your financial situation.</p>
                             <img class="img-fluid1" src="/clients/pexels-andrea-piacquadio-3771839.jpg" alt="" style="width: 10vw;">
                             <p>Jhone</p>
                             <p>Banker</p>
                         </div>
                         <div class="client">
-                            <p>Slate helps you see how many more days you need 
-                                to work to reach your financial 
-                                goal for the month and year.</p>
+                            <p>Here are some tips to help you achieve your goals by considering your financial situation.</p>
                             <img class="img-fluid1" src="/clients/pexels-moose-photos-1036623.jpg" alt="" style="width: 10vw;">
-                            <p>Jhone</p>
-                            <p>Banker</p>
+                            <p>Jecky</p>
+                            <p>Deigner</p>
                         </div>
                     </div>
                 </div>
@@ -322,7 +316,7 @@
                                 </h2>
                                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                                   <div class="accordion-body">
-                                    <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                    It's never too soon to start! The time to plan events varies from a few weeks to years. If your event is small, you can probably put it together in a month or two. A good rule of thumb for any major event, from weddings to a company holiday party, is six months.
                                   </div>
                                 </div>
                               </div>
@@ -334,7 +328,8 @@
                                     </h2>
                                     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"  data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                            A good policy should have a fee or penalty for cancellation, and enough time built into the cancellation notice so you can re-book the spot. Demonstrates Commitment When a cancellation policy is in place, and agreed upon by the customer, then it shows a commitment to the booking on the part of the customer. 
+                                            Click the link below to know about my policy
                                         </div>
                                     </div>
                                 </div>
@@ -346,7 +341,7 @@
                                     </h2>
                                     <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"  data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                            <strong>This is the fourth item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                            Refrain From Using Cash. Record Your Expenses and Budget on a Ledger. Keep Receipts from Each Transaction. Use a Budgeting System or Application.
                                         </div>
                                     </div>
                                 </div>
